feat: implement Py6 cross-platform client exec
